# bioinf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  mapping.sh  print_score.sh  run.sh
Documentation/: Documentation.odt  Dokumentacija.aux  Dokumentacija.bbl  Dokumentacija.blg  Dokumentacija.tex  Dokumentacija.toc  literatura.bib
docs/: journal.pone.0169662.s001.doc
src/: main.cpp
src/algorithm/: KMerGraph.cpp  KMerGraph.h
src/format/: FASTA.cpp  FASTA.h  FASTQ.cpp  FASTQ.h  Format.h  PAF.cpp  PAF.h  SAM.cpp  SAM.h
